--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -4,9 +4,13 @@
     /**
     *  Credit of this piece of code goes to https://desiredpersona.com/disqus-comments-jekyll/ ;-)
     *  Further documentation on https://manuelmc.disqus.com/admin/install/platforms/universalcode/  */
+
+    /* Let me put some content here:
+    {{ base.url }}
+    */
     var disqus_config = function () {
       this.page.url = '{{ page.url | absolute_url }}';
-      this.page.identifier = '{{ page.url | absolute_url }}';
+      this.page.identifier = '{{ page.url }}';
     };
     (function() {
       var d = document, s = d.createElement('script');
